// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1: prettier dir1 dir2 (stdout) 1`] = `
"dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
"
`;

exports[`1a - with *.foo plugin: prettier dir1 dir2 --plugin=../../plugins/extensions/plugin (stdout) 1`] = `
"dir1/a1.foo
dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
dir2/a2.foo
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
"
`;

exports[`1c: prettier dir1 empty (stderr) 1`] = `
"[error] No supported files were found in the directory: \\"empty\\".
"
`;

exports[`1c: prettier dir1 empty (stdout) 1`] = `
"dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
"
`;

exports[`2: prettier dir1 'dir2/**/*' (stderr) 1`] = `
"[error] No parser could be inferred for file: dir2/a2.foo
"
`;

exports[`2: prettier dir1 'dir2/**/*' (stdout) 1`] = `
"dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
dir2/node-shebang
"
`;

exports[`3: prettier nonexistent-dir 'dir2/**/*' (stderr) 1`] = `
"[error] No files matching the pattern were found: \\"nonexistent-dir\\".
[error] No parser could be inferred for file: dir2/a2.foo
"
`;

exports[`3: prettier nonexistent-dir 'dir2/**/*' (stdout) 1`] = `
"dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
dir2/node-shebang
"
`;

exports[`4: prettier . 'dir2/**/*' (stderr) 1`] = `
"[error] No parser could be inferred for file: dir2/a2.foo
"
`;

exports[`4: prettier . 'dir2/**/*' (stdout) 1`] = `
"!dir/a.js
dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
dir2/node-shebang
"
`;

exports[`Negative patterns 1: prettier dir1 '!dir1/nested1' (stdout) 1`] = `
"dir1/a1.js
dir1/b1.js
"
`;

exports[`Negative patterns 1a: prettier dir1 '!dir1/nested1/*' (stdout) 1`] = `
"dir1/a1.js
dir1/b1.js
"
`;

exports[`Negative patterns 2: prettier . '!dir1/nested1' (stdout) 1`] = `
"!dir/a.js
dir1/a1.js
dir1/b1.js
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
"
`;

exports[`Negative patterns 3: prettier . '!dir1/nested1/an1.js' (stdout) 1`] = `
"!dir/a.js
dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/bn1.js
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
"
`;

exports[`Negative patterns 4: prettier '!nonexistent-dir1 !nonexistent-dir2' (stderr) 1`] = `
"[error] No matching files. Patterns: !nonexistent-dir1 !nonexistent-dir2
"
`;

exports[`Negative patterns 4: prettier '!nonexistent-dir1 !nonexistent-dir2' (stdout) 1`] = `""`;

exports[`Negative patterns with explicit files: prettier dir1/a1.js dir2/a2.js '!dir1/*' (stderr) 1`] = `
"[error] Explicitly specified file was ignored due to negative glob patterns: \\"dir1/a1.js\\".
"
`;

exports[`Negative patterns with explicit files: prettier dir1/a1.js dir2/a2.js '!dir1/*' (stdout) 1`] = `
"dir2/a2.js
"
`;

exports[`Trailing slash 1: prettier ./ (stdout) 1`] = `
"!dir/a.js
dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
"
`;

exports[`Trailing slash 2: prettier .// (stdout) 1`] = `
"!dir/a.js
dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
dir2/a2.js
dir2/b2.js
dir2/nested2/an2.js
dir2/nested2/bn2.js
"
`;

exports[`Trailing slash 3: prettier dir1/ (stdout) 1`] = `
"dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
"
`;

exports[`Trailing slash 4: prettier dir1// (stdout) 1`] = `
"dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
"
`;

exports[`Trailing slash 5: prettier .//dir2/..//./dir1// (stdout) 1`] = `
"dir1/a1.js
dir1/b1.js
dir1/nested1/an1.css
dir1/nested1/an1.js
dir1/nested1/bn1.js
"
`;

exports[`Trailing slash run in sub dir 1: prettier .. (stdout) 1`] = `
"../!dir/a.js
../dir1/a1.js
../dir1/b1.js
../dir1/nested1/an1.css
../dir1/nested1/an1.js
../dir1/nested1/bn1.js
a2.js
b2.js
nested2/an2.js
nested2/bn2.js
"
`;

exports[`Trailing slash run in sub dir 2: prettier ../ (stdout) 1`] = `
"../!dir/a.js
../dir1/a1.js
../dir1/b1.js
../dir1/nested1/an1.css
../dir1/nested1/an1.js
../dir1/nested1/bn1.js
a2.js
b2.js
nested2/an2.js
nested2/bn2.js
"
`;

exports[`Trailing slash run in sub dir 3: prettier ../dir1 (stdout) 1`] = `
"../dir1/a1.js
../dir1/b1.js
../dir1/nested1/an1.css
../dir1/nested1/an1.js
../dir1/nested1/bn1.js
"
`;

exports[`Trailing slash run in sub dir 4: prettier ../dir1/ (stdout) 1`] = `
"../dir1/a1.js
../dir1/b1.js
../dir1/nested1/an1.css
../dir1/nested1/an1.js
../dir1/nested1/bn1.js
"
`;

exports[`plugins \`*\` (stderr) 1`] = `
"[error] No parser could be inferred for file: unknown.unknown
"
`;

exports[`plugins \`*\` (stdout) 1`] = `
"javascript.js
plugin.uppercase-rocks
"
`;

exports[`plugins \`.\` (stdout) 1`] = `
"javascript.js
plugin.uppercase-rocks
"
`;
